# boards

./: README.md  initial.py  pyproject.toml  requirements.txt
board/: board.toml
board/doing/: stuff.md
board/done/: morestuff.md
board/todo/: nice.md
boards/: main.py
